[package]
name = "aoc-main"
description = "A macro which defines a handful main for the Advent of Code"
version = "0.3.0"
authors = ["Rémi Dupré <r.dupre@qwant.com>"]
repository = "https://github.com/remi-dupre/aoc"
license = "Apache-2.0"
readme = "README.md"
keywords = ["advent", "aoc", "macro"]
edition = "2018"

[features]
# Criterion is a quite heavy dependencies which will not be used in many cases.
bench = ["criterion"]

[dependencies]
attohttpc = { version = "0.16.0", default_features = false, features = ["tls"] }
clap = { version = "3.0.0-beta.2", default_features = false, features = ["std"] }
colored = "2.0.0"
dirs = "3.0.1"

# Optional dependencies
criterion = { version = "0.3.4", optional = true }
