[package]
name = "aoc-main"
description = "A macro which defines a handful main for the Advent of Code"
version = "0.5.0"
authors = ["Rémi Dupré <r.dupre@qwant.com>"]
repository = "https://github.com/remi-dupre/aoc"
license = "Apache-2.0"
readme = "README.md"
keywords = ["advent", "aoc", "macro"]
edition = "2021"

[features]
# Criterion is a quite heavy dependencies which will not be used in many cases.
bench = ["criterion"]

[dependencies]
attohttpc = { version = "0.24", default_features = false, features = ["tls"] }
clap = { version = "4", features = ["string"] }
colored = "2"
dirs = "4"

# Optional dependencies
criterion = { version = "0.4", optional = true }
